2015-05-08  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r183945.
        https://bugs.webkit.org/show_bug.cgi?id=144789

        "It broke all the GTK+ tests" (Requested by KaL on #webkit).

        Reverted changeset:

        "[GTK] Checks for DEVELOPMENT_BUILD are all wrong"
        https://bugs.webkit.org/show_bug.cgi?id=144746
        http://trac.webkit.org/changeset/183945

2015-05-07  Myles C. Maxfield  <mmaxfield@apple.com>

        Cleanup after r183940
        https://bugs.webkit.org/show_bug.cgi?id=144768

        Unreviewed.

        Looks like the empty directories were not deleted.

        * Source/PAL: Removed.
        * Source/PAL/Configurations: Removed.
        * Source/PAL/PAL.xcodeproj: Removed.
        * Source/PAL/graphics: Removed.

2015-05-07  Michael Catanzaro  <mcatanzaro@igalia.com>

        [GTK] Checks for DEVELOPMENT_BUILD are all wrong
        https://bugs.webkit.org/show_bug.cgi?id=144746

        Reviewed by Martin Robinson.

        Don't set DEVELOPMENT_BUILD. We check whether it is defined for conditional compilation, not
        what it is defined to, so defining it to 0 effectively turned it on always.

        * Source/cmake/OptionsGTK.cmake:

2015-05-05  Myles C. Maxfield  <mmaxfield@apple.com>

        Revert "Introducing the Platform Abstraction Layer (PAL)"
        https://bugs.webkit.org/show_bug.cgi?id=144751

        Unreviewed.

        PAL should be a new target inside WebCore, rather than a top-level folder.

        * WebKit.xcworkspace/contents.xcworkspacedata: Add it to the workspace.

2015-05-07  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.9.1 release.

        * Source/cmake/OptionsGTK.cmake: Bump version numbers.

2015-05-05  Myles C. Maxfield  <mmaxfield@apple.com>

        Introducing the Platform Abstraction Layer (PAL)
        https://bugs.webkit.org/show_bug.cgi?id=143358

        Reviewed by Simon Fraser.
