@@ -1,3 +1,15 @@
+2015-05-08  Daniel Bates  <dabates@apple.com>
+
+        [iOS] WebSQL operations are not performed after device is locked
+        https://bugs.webkit.org/show_bug.cgi?id=137503
+        <rdar://problem/20844952>
+
+        Rubber-stamped by Alexey Proskuryakov.
+
+        Add a manual test to help verify that we do not regress this issue.
+
+        * ManualTests/ios/execute-sql-transaction-callback-after-locking-unlocking-device-in-earlier-transaction.html: Added.
+
 2015-05-08  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, rolling out r183945.
